--- a/medcab9/src/App.css
+++ b/medcab9/src/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
