--- a/medcab9/src/components/StrainResults.styles.scss
+++ b/medcab9/src/components/StrainResults.styles.scss
@@ -1,20 +1,19 @@
-.card-body {
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: baseline;
-  padding: 40px;
-  // display: flex;
-  // justify-content: center;
-}
+// .card-body {
+//   margin: 0 auto;
+//   display: flex;
+
+// }
 
 .card-custom-style {
-  max-width: 400px;
+  width: 400px;
   margin: 30px 10px;
   float: left;
   height: auto;
-}
 
-.card-custom-style {
+  @media only screen and (max-width: 768px) {
+    width: 100%;
+  }
+
   & .uk-card-body {
     & h3 {
       font-family: "Montserrat";
@@ -22,7 +21,7 @@
     }
 
     & .good-for {
-      font-size: 0.6rem;
+      font-size: 0.8rem;
     }
 
     & .line-clamp {
