--- a/medcab9/src/components/Header.styles.scss
+++ b/medcab9/src/components/Header.styles.scss
@@ -1,14 +1,71 @@
 .logo {
   height: 80px;
+
+  @media only screen and (max-width: 960px) {
+    height: 40px;
+  }
 }
 
 .header {
+  // width: 100%;
   background-color: #fbe27a !important;
-  box-shadow: 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.23);
+  z-index: 999;
 
-  & li {
-    & .link {
-      color: #333
+  & .uk-nav {
+    & li {
+      & a {
+        text-align: right;
+      }
     }
   }
+
+  & .navbar-right-side-mobile {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+
+    @media (min-width: 961px) {
+      display: none;
+      width: none;
+    }
+  }
+
+  & .navbar-right-side {
+    @media (max-width: 960px) {
+      display: none;
+    }
+
+    & li.link {
+      color: #333;
+
+      @media only screen and (max-width: 960px) {
+        display: block;
+      }
+    }
+  }
+}
+
+.uk-nav.navbar-background {
+  background-color: #fbe27a;
+  padding: 20px;
+  z-index: 999;
+  width: 100%;
+  transform: translate(-8%, 12%);
+  top: 50%;
+  left: 50%;
+
+  & a.link {
+    color: #333;
+  }
+}
+
+.uk-accordion-title::before {
+  display: none;
+}
+
+.uk-accordion-title:focus,
+.uk-accordion-title:hover {
+  width: 100%;
+  text-align: right;
 }
